fixing spacing

--- a/components/services/MobileAppDevelopment/Styles.css
+++ b/components/services/MobileAppDevelopment/Styles.css
@@ -1,5 +1,5 @@
 .main {
-  height: 75vh;
+  height: 90vh;
   position: relative;
 }
 
